update impact upper and filter repetitive features in calculating the accuracy

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 output/
+FEMA_Damage_Assessments_shapefiles/
+FEMA_Harvey2017_Claims_shp/
+*.zip
 data/
 cache/
 # Byte-compiled / optimized / DLL files
